# hypertorch

./: .gitignore  README.md  optimize_petals.py  optimizedemo.py  program.py  pyproject.toml  readme.md  setup.py  test.py
common/: pyutils.py
elevated/: __init__.py  models.py  nodelib.py
hypertorch/: __init__.py  constants.py  models.py  nodelib.py  searchspaceprimitives.py
hypertorch2/: __init__.py  constants.py  models.py  nodelib.py  searchspaceprimitives.py
modules/common/: pendulum_ext.py  pyutils.py
modules/elevated/: models.py  nodelib.py
tests/: __init__.py  layer_tests.py  test_containers.py  test_layers.py  test_stuff.py
