[tool.poetry]
name = "hypertorch"
version = "0.1.1"
description = ""
authors = ["Ronny Kaste <rkaste@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
torch = "^2.2.0"
numpy = "^1.26.3"
pendulum = "^3.0.0"
toolz = "^0.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
